tests/integration/tests/check_commands/CHECK-EMPTY/01-error_CHECK_EMPTY_without_previous_CHECK/sample.itest
; RUN: cat %S/filecheck.input | %expect_exit 2 %FILECHECK_EXEC "%S/filecheck.check" 2>&1 | %FILECHECK_TESTER_EXEC "%s" --match-full-lines
; CHECK: {{^.*}}FileCheck{{(\.py)?$}}
; CHECK: {{.*}}filecheck.check:1:3: error: found 'CHECK-EMPTY' without previous 'CHECK: line{{$}}
; CHECK: {{^}}; CHECK-EMPTY:{{$}}
; CHECK: {{^}}  ^
; CHECK-EMPTY:
